--- a/templates/404.html
+++ b/templates/404.html
@@ -20,7 +20,7 @@
 <div id="foot" class="medium-margin">
    <p class="issue smaller-text"> Open an issue to describe your problem: </p>
    <a href="https://github.com/pqba/Ladle/issues" class="github-link" target="_blank">
-      <div class="github-icon"></div>
+      <div class="github-icon large-icon"></div>
    </a>
 </div>
 {% endblock %}
