--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
 <div id="foot">
     <p> See my GitHub for source: </p>
     <a href="https://github.com/pqba" class="github-link" target="_blank">
-         <div class="github-icon"></div>
+         <div class="github-icon large-icon"></div>
     </a>
 </div>
 {% endblock %}
