--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <a href="/">Home</a>
     <a href="/subreddit_list">Curate List</a>
     <a href="/about">About</a>
-    <button class="theme-icon" id="theme-toggle"></button>
+    <button class="theme-icon small-icon" id="theme-toggle"></button>
   </div>
   {% block body %}
   {% endblock %}
