--- a/templates/post.html
+++ b/templates/post.html
@@ -6,7 +6,7 @@
 <div class="post-container">
     <a class="post-link" href="{{ p_link }}">
         <h2>{{info.title}} {% if info.nsfw == true %}
-            <div class="icon-container"><div class="warn-icon"></div></div>
+            <div class="icon-container"><div class="warn-icon small-icon"></div></div>
             {% endif %}
         </h2>
     </a>
@@ -24,13 +24,13 @@
     </div>
     <div class="post-content">
         {% if info.lock == true %}
-        <div class="icon-container"><div class="lock-icon"></div></div>
+        <div class="icon-container"><div class="lock-icon small-icon"></div></div>
         {% endif %}
         <div class="md-text">{{ p_text | safe }}</div>
         {{ p_article | safe }}
     </div>
     <div class="post-stats">
-        <div class="icon-container"> <div class="up-icon"></div> {{info.score}} [{{info.ratio}}%] | {{info.nc}}
+        <div class="icon-container"> <div class="up-icon small-icon"></div> {{info.score}} [{{info.ratio}}%] | {{info.nc}}
             comments</div>
     </div>
     <div class="post-comments">
