--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
       <a href="/post/{{post[-1]}}" class="post-link">
         <p class="no-vertical-margin"><b>{{post[0]}}</b> {{post[1]}} </p>
       </a>
-      <div class="icon-container"> <div class="up-icon"><div class="warn-icon"></div></div> {{post[3]}} [{{post[2]}}%] | {{post[5]}} comments </div>
+      <div class="icon-container"> <div class="up-icon small-icon"></div> {{post[3]}} [{{post[2]}}%] | {{post[5]}} comments
+      </div>
     </li>
     {% endfor %}
   </ul>
