--- a/templates/user.html
+++ b/templates/user.html
@@ -17,8 +17,8 @@
                 <a href="/post/{{ post[0] }}" class="post-link">
                     <p class="no-vertical-margin"><b>{{ post[3] }}</b></p>
                 </a>
-                <div><div class="up-icon small-icon"></div></div> {{ post[1] }} | {{ post[2] }}
-                comments
+                <div class="icon-container"><div class="up-icon small-icon"></div>{{ post[1] }} | {{ post[2] }}
+                comments</div>
             </li>
             {% endfor %}
         </ul>
