--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -409,6 +409,33 @@ background-color: var(--pastel-red);
     height: 24.705em;
     width: 30em;
 }
+
+/* Image gallery */
+
+.slider {
+  width: 100%;
+  height: 30em;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider img {
+width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+img.activeSlide {
+  opacity: 1;
+  z-index: 1;
+}
+
+
+
 /* Text sizes */
 .smaller-text {
   font-size: 80%;
